# TEK_labels

./: .gitignore  README.md  __init__.py  environment.yml  pyproject.toml
data/synthetic/: pine_ridge_synthetic_ndvi.json  pine_ridge_synthetic_ndvi.tif  pine_ridge_synthetic_stress.json  pine_ridge_synthetic_stress.tif  pine_ridge_synthetic_vegetation.geojson
docs/: care_alignment.md  ieee2890_alignment.md  label_reference.md
examples/: pine_ridge_workflow.py
local_contexts_geospatial/: labels.py  propagation.py  provenance.py  spatial.py  validation.py
localcontexts/: labels.py  propagation.py  provenance.py  spatial.py  validation.py
notebooks/: 01_labels_and_schema.ipynb  02_vector_workflows.ipynb  03_raster_workflows.ipynb  04_propagation_and_lineage.ipynb  05_spatial_authority.ipynb  06_care_validation.ipynb  07_ieee2890_provenance.ipynb
outputs/: pine_ridge_ndvi_anomaly.csv  pine_ridge_ndvi_anomaly.provenance.json  pine_ridge_ndvi_anomaly_metadata.json
src/: labels.py  propagation.py  spatial.py  validation.py
