[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "localcontexts-geo"
version         = "0.1.0"
description     = "Toolkit for embedding Local Contexts TK/BC labels in geospatial workflows"
readme          = "README.md"
license         = { text = "AGPL-3.0 license" }
requires-python = ">=3.11"
authors         = [
    { name = "Lilly Jones, PhD", email = "daearconsulting@gmail.com" },
]
keywords = [
    "indigenous data sovereignty",
    "local contexts",
    "TK labels",
    "BC labels",
    "CARE principles",
    "OCAP",
    "IEEE 2890",
    "geospatial",
    "provenance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

# Core dependencies (no geospatial to keep base package lightweight)
dependencies = [
    "pandas>=2.0",
]

# Optional dependency groups
[project.optional-dependencies]
spatial = [
    "geopandas>=0.14",
    "shapely>=2.0",
]
raster = [
    "rasterio>=1.3",
    "numpy>=1.24",
]
all = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "rasterio>=1.3",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "jupyterlab>=4.0",
]

[project.urls]
Homepage   = "https://github.com/daearconsulting/local_contexts_geospatial"
Repository = "https://github.com/daearconsulting/local_contexts_geospatial"

[tool.setuptools.packages.find]
where   = ["."]
include = ["localcontexts*"]
